@@ -80,7 +80,7 @@ class ZMPageCachePlugin extends Plugin {
         $parameters = $request->getParameterMap();
         ksort($parameters);
         return $request->getRequestId() . '-' . http_build_query($parameters) . '-' . $request->getAccountId() . '-' . 
-                  $session->getLanguageId() . '-' . Runtime::getThemeId();
+                  $session->getLanguageId() . '-' . ZMThemes::instance()->getActiveThemeId($session->getLanguageId());
     }
 
     /**
