@@ -40,17 +40,17 @@
     <meta name="generator" content="ZenMagick <?php echo ZMSettings::get('zenmagick.version') ?>" />
     <meta name="keywords" content="<?php echo $metaTags->getKeywords()?>" />
     <meta name="description" content="<?php echo $metaTags->getDescription()?>" />
-    <?php $utils->cssFile('site.css') ?>
-    <?php $utils->cssFile('ie.css', array('prefix' => '<!--[if IE]>', 'suffix' => '<![endif]-->')) ?>
-    <?php $utils->jsBottom('common.js') ?>
+    <?php $resources->cssFile('site.css') ?>
+    <?php $resources->cssFile('ie.css', array('prefix' => '<!--[if IE]>', 'suffix' => '<![endif]-->')) ?>
+    <?php $resources->jsFile('common.js', ZMViewUtils::FOOTER) ?>
     <?php /* give other themes the chance to add to the default CSS without having to copy everything */ ?>
     <?php if ($this->exists("theme.css")) { ?>
-        <?php $utils->cssFile('theme.css') ?>
+        <?php $resources->cssFile('theme.css') ?>
     <?php } ?>
     <?php $pageCSS = "css/".$request->getRequestId().".css"; ?>
     <?php /* page specific CSS */ ?>
     <?php if ($this->exists($pageCSS)) { ?>
-        <?php $utils->cssFile($pageCSS) ?>
+        <?php $resources->cssFile($pageCSS) ?>
     <?php } ?>
     <?php if (!ZMTemplateManager::instance()->isLeftColEnabled() || !ZMTemplateManager::instance()->isRightColEnabled()) { ?>
       <style type="text/css" media="screen,projection">
